Ending fixed up z-index of points

--- a/main.styl
+++ b/main.styl
@@ -138,19 +138,15 @@ input[type="file"]
     position absolute
 
 .alto_1 
-    z-index 10000000000
     cursor move
 
 .alto_2 
-    z-index 10000000000
     cursor move
 
 .ancho_1 
-    z-index 10000000000
     cursor move
 
 .ancho_2 
-    z-index 10000000000
     cursor move
 
 .imagenes_puntos
